# dogeman_01_ws_vm

./: .gitignore  CLAUDE.md  README.md
src/mecanum_robot/: CMakeLists.txt  package.xml
src/mecanum_robot/param/: amcl_params.yaml  costmap_common_params_mecanum.yaml  dwa_local_planner_params_mecanum.yaml
src/mecanum_robot/urdf/: mecanum_robot.urdf.xacro
src/mocap_localization/: CMakeLists.txt  README.md  package.xml
src/mocap_localization/launch/: gazebo_fake_mocap.launch  mocap_to_tf.launch  vm_map_and_rviz.launch
src/mocap_localization/maps/: animation_field.yaml
src/mocap_localization/scripts/: mocap_to_tf.py  odom_to_pose.py
src/orchard_map/: CMakeLists.txt  README.md  package.xml
src/orchard_map/launch/: vm_map_and_rviz.launch  vm_master.launch
src/orchard_map/maps/: README.md  animation_field.pgm
src/orchard_map/rviz/: mvp.rviz
src/orchard_navigation/: CMakeLists.txt  package.xml
src/orchard_navigation/launch/: multi_robot_navigation.launch  multi_robot_navigation_mocap.launch  orchard_navigation.launch  single_robot_mocap.launch
src/orchard_navigation/maps/: orchard_map.pgm  orchard_map.yaml
src/orchard_navigation/rviz/: navigation.rviz
src/orchard_navigation/worlds/: orchard.world
src/orchard_orchestrator/: CMakeLists.txt  README.md  package.xml
src/orchard_orchestrator/config/: orchard_layout.yaml
src/orchard_orchestrator/launch/: orchestrator.launch
src/orchard_orchestrator/scripts/: hungarian_utils.py  orchestrator.py
src/orchard_orchestrator_real/: CMakeLists.txt  README.md  package.xml
src/orchard_orchestrator_real/config/: zones.yaml
src/orchard_orchestrator_real/launch/: multi_robot.launch  multi_robot_real.launch  simple_waypoint_runner.launch  single_goal_debug.launch  single_goal_simple.launch  tf_monitor.launch  waypoint_runner.launch
src/orchard_orchestrator_real/scripts/algorithms/: cost_matrix.py  hungarian.py
src/orchard_orchestrator_real/scripts/controller/: simple_controller.py
src/orchard_orchestrator_real/scripts/phase1/: simple_waypoint_runner.py  single_goal_debug.py  single_goal_simple.py  tf_monitor.py  waypoint_runner.py
src/orchard_orchestrator_real/scripts/phase2/: README.md
src/orchard_orchestrator_real/scripts/phase3/: README.md  multi_robot_orchestrator.py
src/orchard_orchestrator_real/scripts/tests/: test_fairness_hungarian.py
src/orchard_orchestrator_real/scripts/utils/: move_base_client.py  tf_helper.py
src/orchard_task_assignment/: CMakeLists.txt  package.xml
src/orchard_task_assignment/config/: orchard_tasks.yaml  orchard_tasks_hungarian.yaml
src/orchard_task_assignment/docs/: hungarian_usage.md
src/orchard_task_assignment/launch/: task_assignment.launch  task_assignment_hungarian.launch
src/orchard_task_assignment/scripts/: task_assigner.py  task_assigner_hungarian.py
