<?xml version="1.0"?>
<package format="2">
  <name>mecanum_robot</name>
  <version>0.1.0</version>
  <description>Mecanum wheel robot description and navigation parameters for orchard simulation</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
</package>
