<?xml version="1.0"?>
<package format="2">
  <name>orchard_navigation</name>
  <version>0.1.0</version>
  <description>Orchard inspection robot navigation using TurtleBot3 Burger in a 12x8m Gazebo world.</description>

  <maintainer email="dogeman@todo.todo">dogeman</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>turtlebot3_gazebo</build_depend>
  <build_depend>turtlebot3_navigation</build_depend>

  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>turtlebot3_gazebo</build_export_depend>
  <build_export_depend>turtlebot3_navigation</build_export_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>
